--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/login",
+            "outputPath": "dist/iconstruye",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
